rep-commission-lwc/force-app/main/default/objects/Commission_Plan_Field_Config__c/Commission_Plan_Field_Config__c.object-meta.xml
<CustomObject>
    <label>Commission Plan Field Config</label>
    <nameField>
        <label>Commission Plan Field Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Plan Field Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>