rep-commission-lwc/force-app/main/default/objects/Commission_Plan_Field_Config__c/fields/Calculation_Expression__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Expression__c</fullName>
    <label>Calculation Expression</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Arithmetic expression for _calc__c fields only. Reference other fields with {Field_API_Name__c} syntax. Supports +, -, *, /, and parentheses. Example: {Brokered_Margin_Amount__c} * ({Brokered_Margin__c} / 100). Leave blank to use legacy hardcoded logic.</description>
</CustomField>