rep-commission-lwc/force-app/main/default/objects/Commission_Plan_Field_Config__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>