rep-commission-lwc/force-app/main/default/objects/Commission_Plan_Field_Config__c/fields/Report_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Report_Field_Label__c</fullName>
    <label>Report Field Label</label>
    <type>Text</type>
    <length>50</length>
</CustomField>