rep-commission-lwc/force-app/main/default/objects/Commission_Plan_Field_Config__c/fields/Report_Source__c.field-meta.xml
<CustomField>
    <fullName>Report_Source__c</fullName>
    <label>Report Source</label>
    <type>Text</type>
    <length>18</length>
</CustomField>