rep-commission-lwc/force-app/main/default/objects/Commission_Plan_Field_Config__c/fields/Usage_Period__c.field-meta.xml
<CustomField>
    <fullName>Usage_Period__c</fullName>
    <label>Usage Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><label>Monthly</label><default>true</default></value>
            <value><fullName>Quarterly</fullName><label>Quarterly</label><default>false</default></value>
            <value><fullName>Annual</fullName><label>Annual</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>